# src/controllers/category.js
@@ -1,4 +1,5 @@
-import { getAllCategories } from "../services/category.js";
+import createHttpError from "http-errors";
+import { getAllCategories,getCategoryById } from "../services/category.js";
 import { parsePaginationParams } from "../utils/parsePaginationParams.js";
 
 
@@ -13,5 +14,19 @@ export const getAllCategoriesController = async (req, res) => {
         status: 200,
         message: 'Successfully found categories!',
         data: categories,
+    });
+}
+
+export const getCategoryByIdController = async (req, res, next) => {
+    const { categoryId } = req.params;
+    const category = await getCategoryById(categoryId);
+    if (!category) {
+        return next(createHttpError(404, 'Category not found'))
+    }
+
+    res.status(200).json({
+        status: 200,
+        message: 'Successfully found category',
+        data: category,
     });
 }
