# src/routers/category.js
@@ -1,9 +1,10 @@
 import { Router } from 'express';
 import { ctrlWrapper } from '../utils/ctrlWrapper.js';
-import { getAllCategoriesController } from '../controllers/category.js';
+import { getAllCategoriesController,getCategoryByIdController } from '../controllers/category.js';
 const router = Router();
 
 router.get('/', ctrlWrapper(getAllCategoriesController));
+router.get('/:categoryId', ctrlWrapper(getCategoryByIdController));
 
 
 export default router;
